[package]
name = "rust-physics-workbench"
version = "0.1.0"
authors = ["tcallred <taylor.allred21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "top_down"
path = "src\\bin\\top_down\\top_down.rs"

[[bin]]
name = "side_view"

[dependencies]
nalgebra = "0.20"
ncollide2d = "0.22"
nphysics2d = "0.14"
ggez = "0.5"
rand = "0.7"